--- a/rbftrace-model-extraction/Cargo.toml
+++ b/rbftrace-model-extraction/Cargo.toml
@@ -11,3 +11,6 @@ serde_yaml = "0.8"
 serde = { version = "1.0.126", features = ["derive"] }
 structopt = "0.3.17"
 ringbuffer = "0.8.2"
+realfft = "3.0.0"
+rustfft = "6.0.1"
+itertools = "0.10.2"
